--- a/views/main.templ
+++ b/views/main.templ
@@ -7,6 +7,8 @@ templ RootLayout(title string) {
 			<script src="https://unpkg.com/htmx.org@1.9.10"></script>
 			<script src="https://unpkg.com/htmx.org/dist/ext/ws.js"></script>
 		</head>
-		<body></body>
+		<body>
+			@JokeForm("", "")
+		</body>
 	</html>
 }
