--- a/views/form.templ
+++ b/views/form.templ
@@ -1,9 +1,16 @@
 package views
 
 templ JokeForm(prevValue string, err string) {
-	<form method="post" hx-post="/create" id="joke-form" hx-target="#joke-form" hx-swap="outerHTML">
+	<form
+ 		method="post"
+ 		id="joke-form"
+ 		hx-post="/create"
+ 		hx-target="#joke-form"
+ 		hx-swap="outerHTML"
+ 		hx-swap-oob="true"
+	>
 		<h2>Give us your best joke!</h2>
-		<input name="joke" value={ prevValue } placeholder="Enter a joke"/>
+		<input name="joke" value={ prevValue } required placeholder="Enter a joke"/>
 		if err!= "" {
 			<p>Error: { err }</p>
 		}
